my first website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>my class as a coding programmer</title>
         <style>
             body {
-                background: AB1AFF;
+                background: #E81D14;
                 color:  #AB1AFF;
                 padding: 10px;
                 font-family: arial;
